// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Base Button Snapshot should render with large size 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 18px;
  font-weight: 500;
  height: 56px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 24px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #292F7C;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #1A1E51;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 18px;
  font-weight: 500;
  height: 56px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 24px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #292F7C;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #1A1E51;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    id="testId"
    shape="fill"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with small size 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 12px;
  font-weight: 500;
  height: 28px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: .32px;
  line-height: 16px;
  margin: 0;
  min-width: 0;
  overflow: hidden;
  padding: 4px 8px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #292F7C;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #1A1E51;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 12px;
  font-weight: 500;
  height: 28px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: .32px;
  line-height: 16px;
  margin: 0;
  min-width: 0;
  overflow: hidden;
  padding: 4px 8px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #292F7C;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #1A1E51;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    id="testId"
    shape="fill"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated color 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid;
  border-color: #8B91DA;
  border-radius: 8px;
  color: #3942B0;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #E8E9F8;
  color: #3942B0;
}

.emotion-0:not(:disabled):after {
  background: #707070;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #BABDE9;
  color: #292F7C;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid;
  border-color: #8B91DA;
  border-radius: 8px;
  color: #3942B0;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #E8E9F8;
  color: #3942B0;
}

.emotion-0:not(:disabled):after {
  background: #707070;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #BABDE9;
  color: #292F7C;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="secondary"
    id="testId"
    shape="fill"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated shape 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 100%;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #292F7C;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #1A1E51;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 100%;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #292F7C;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #1A1E51;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    id="testId"
    shape="round"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated textTransform 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #292F7C;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #1A1E51;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #292F7C;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #1A1E51;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    id="testId"
    shape="fill"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated variant 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #292F7C;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #1A1E51;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3942B0;
  border: 0;
  border-color: #3942B0;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: "Work Sans",Helvetica,sans-serif;
  font-size: 16px;
  font-weight: 500;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: inherit;
  line-height: 24px;
  margin: 0;
  min-width: 96px;
  overflow: hidden;
  padding: 12px 16px;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px solid #0074B7;
  outline-offset: 2px;
  z-index: 1;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #292F7C;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):after {
  background: #FFFFFF;
  border-radius: 50%;
  content: '';
  height: 28px;
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: 28px;
}

.emotion-0:not(:disabled):active {
  background: #1A1E51;
  color: #FFFFFF;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="primary"
    id="testId"
    shape="fill"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;
